# Practice_2025

./: CMakeLists.txt
Src_dir/: CMakeLists.txt  Data.hpp  MyDraw.cpp  MyDraw.hpp  main.cpp  prWindow.cpp  prWindow.hpp
